syntax = "proto3";

package com.road.yishi.proto.battle;

message BossHpMsg {
  int32 campaignId = 1;
  int32 value = 2;
  int32 nodeId = 3;
  int32 livingId = 4;
}
